# chiisai-django

./: .envrc-example  Dockerfile  Makefile  mypy.ini  pyproject.toml  requirements.txt
chiisai/: manage.py
chiisai/chiisai/: api.py  asgi.py  settings.py  urls.py  wsgi.py
chiisai/shortener/: admin.py  alias.py  api.py  base.py  models.py  tests.py  views.py
chiisai/shortener/migrations/: 0001_initial.py  0002_link_status.py
chiisai/shortener/tests/: test_base.py
