[tool.poetry]
name = "chiisai-django"
version = "0.1.0"
description = "A humble URL shortener"
authors = ["Mike Pirnat <mpirnat@gmail.com>"]
readme = "README.md"
packages = [{include = "chiisai"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.3"
django-ninja = "^0.22.2"
django-ninja-apikey-mpirnat = { git = "https://github.com/mpirnat/django-ninja-apikey.git" }
mypy = "^1.4.1"
dj-database-url = "^2.0.0"
django-stubs = "^4.2.3"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
pytest-coverage = "^0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
ruff = "^0.0.277"

[tool.ruff]
select = ["E", "W", "F", "I", "S", "B", "Q"]
ignore = ["E501", "S101"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.isort]
known-first-party = ["shortener"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
